# annotationtool

./: CMakeLists.txt  README.md
gui/: associatedialog.ui  mainwindow.ui
src/: associatedialog.cpp  associatedialog.h  displaymanager.cpp  displaymanager.h  grabber.cpp  grabber.h  imagegrabber.cpp  imagegrabber.h  imagemanager.cpp  imagemanager.h  keyboardhandler.cpp  keyboardhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mousehandler.cpp  mousehandler.h  mouselabel.cpp  mouselabel.h  qtcvtransform.cpp  qtcvtransform.h  rectangle.cpp  rectangle.h  rectangleinformation.cpp  rectangleinformation.h  rectanglemanager.cpp  rectanglemanager.h  utils.h  videograbber.cpp  videograbber.h  xmlreader.cpp  xmlreader.h  xmlwriter.cpp  xmlwriter.h
